# rpg_worldsmith

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml
src/rpg_worldsmith/: cli.py  config.py  main.py
src/rpg_worldsmith/services/: preference_collector.py  world_creator.py  world_generator.py
src/rpg_worldsmith/utils/: slugify.py
