[project]
name = "rpg-worldsmith"
version = "0.1.0"
description = "IA-powered RPG world and character generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.93.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "typer>=0.16.0",
    "unidecode>=1.4.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pyright>=1.1.402",
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.pytest.ini_options]
addopts = "-ra -q"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "double"
preview = true

[project.scripts]
rpg = "rpg_worldsmith.cli:main"

